@@ -2,7 +2,10 @@ package com.hanghae.settlement_system.config.batch;
 
 import com.hanghae.settlement_system.settlement.domain.Settlement;
 import com.hanghae.settlement_system.settlement.repository.SettlementRepository;
-import com.hanghae.settlement_system.video.domain.VideoViewLog;
+import com.hanghae.settlement_system.user.domain.User;
+import com.hanghae.settlement_system.user.repository.UserRepository;
+import com.hanghae.settlement_system.video.domain.Video;
+import com.hanghae.settlement_system.video.repository.VideoRepository;
 import com.hanghae.settlement_system.video.repository.VideoViewLogRepository;
 import org.springframework.batch.core.Job;
 import org.springframework.batch.core.Step;
@@ -15,7 +18,6 @@ import org.springframework.batch.item.data.RepositoryItemReader;
 import org.springframework.batch.item.data.RepositoryItemWriter;
 import org.springframework.batch.item.data.builder.RepositoryItemReaderBuilder;
 import org.springframework.batch.item.data.builder.RepositoryItemWriterBuilder;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.data.domain.Sort;
@@ -23,7 +25,7 @@ import org.springframework.transaction.PlatformTransactionManager;
 
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 @Configuration
 public class SettlementJobConfig {
@@ -31,12 +33,21 @@ public class SettlementJobConfig {
     private final JobRepository jobRepository;
     private final PlatformTransactionManager platformTransactionManager;
     private final VideoViewLogRepository videoViewLogRepository;
+    private final VideoRepository videoRepository; // Video repository 추가
+    private final UserRepository userRepository; // User repository 추가
     private final SettlementRepository settlementRepository;
 
-    public SettlementJobConfig(JobRepository jobRepository, PlatformTransactionManager platformTransactionManager, VideoViewLogRepository videoViewLogRepository, SettlementRepository settlementRepository) {
+    public SettlementJobConfig(JobRepository jobRepository,
+                               PlatformTransactionManager platformTransactionManager,
+                               VideoViewLogRepository videoViewLogRepository,
+                               VideoRepository videoRepository,
+                               UserRepository userRepository,
+                               SettlementRepository settlementRepository) {
         this.jobRepository = jobRepository;
         this.platformTransactionManager = platformTransactionManager;
         this.videoViewLogRepository = videoViewLogRepository;
+        this.videoRepository = videoRepository;
+        this.userRepository = userRepository;
         this.settlementRepository = settlementRepository;
     }
 
@@ -50,42 +61,56 @@ public class SettlementJobConfig {
     @Bean
     public Step settlementStep() {
         return new StepBuilder("settlementStep", jobRepository)
-                .<VideoViewLog, Settlement>chunk(1, platformTransactionManager)
-                .reader(settlementReader(null))
-                .processor(settlementProcessor(null))
+                .<User, Settlement>chunk(1, platformTransactionManager)
+                .reader(settlementReader())
+                .processor(settlementProcessor())
                 .writer(settlementWriter())
                 .build();
     }
 
     @Bean
     @StepScope
-    public RepositoryItemReader<VideoViewLog> settlementReader(@Value("#{jobParameters['userId']}") Long userId) {
-        return new RepositoryItemReaderBuilder<VideoViewLog>()
-                .name("settlementReader")
-                .pageSize(10)
-                .methodName("findByUserId")
-                .arguments(Collections.singletonList(userId))
-                .repository(videoViewLogRepository)
-                .sorts(Map.of("id", Sort.Direction.ASC))
+    public RepositoryItemReader<User> settlementReader() {
+        return new RepositoryItemReaderBuilder<User>()
+                .repository(userRepository)
+                .methodName("findAll")
+                .sorts(Collections.singletonMap("id", Sort.Direction.ASC))
+                .name("userReader")
                 .build();
     }
 
     @Bean
     @StepScope
-    public ItemProcessor<VideoViewLog, Settlement> settlementProcessor(@Value("#{jobParameters['date']}") String date) {
+    public ItemProcessor<User, Settlement> settlementProcessor() {
+        return user -> {
+            LocalDate settlementDate = LocalDate.now().minusDays(1);
 
-        return log -> {
-            LocalDate settlementDate = LocalDate.parse(date);
-            Long userId = log.getUser().getId();
+            // 각 유저가 업로드한 비디오의 조회수 총합을 계산
+            List<Video> userVideos = videoRepository.findByUserId(user.getId());
+            Long videoViewsTotal = userVideos.stream()
+                    .mapToLong(video -> videoViewLogRepository.countByVideoIdAndPlayedAtBetween(
+                            video.getId(),
+                            settlementDate.atStartOfDay(),
+                            settlementDate.plusDays(1).atStartOfDay()))
+                    .sum();
 
-            // Settlement가 이미 존재하는지 확인
-            if (settlementRepository.findByUserIdAndSettlementDate(userId, settlementDate).isPresent()) {
-                return null;
-            }
+            // 정산 금액 계산
+            double videoEarnings = calculateEarnings(videoViewsTotal);
+            double adEarnings = 0.0; // 광고 수익 관련 로직은 추후 추가
+            double totalEarnings = videoEarnings + adEarnings;
 
-            Long viewCount = videoViewLogRepository.countByUserId(userId);
-            return new Settlement(userId, settlementDate, viewCount.doubleValue(), 0.0);
+            return Settlement.builder()
+                    .userId(user.getId())
+                    .settlementDate(settlementDate)
+                    .videoEarnings(videoEarnings)
+                    .adEarnings(adEarnings)
+                    .build();
         };
+    }
+
+    private double calculateEarnings(Long videoViewsTotal) {
+        // 예시: 조회수 1건당 0.01달러로 계산
+        return videoViewsTotal * 0.01;
     }
 
     @Bean
